[project]
name = "polyagent"
version = "0.0.6"
description = "Polymarket copy-trading signal service on Kite Mainnet"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
